# ffscrape

./: Cargo.toml
src/: main.rs
src/sites/: fanfiction.rs  fanfiction_v2.rs  mod.rs
