[package]
name = "ffscrape"
version = "0.1.0"
authors = ["Txuritan <txurtian@yahoo.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.29"
error-chain = "0.10"
fern = "0.5"
log = "0.4"
regex = "0.2"
reqwest = "0.8"
scraper = "0.4"
select = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vec_map = { version = "0.8", features = ["eders"] }
